--- a/style.css
+++ b/style.css
@@ -1,4 +1,7 @@
-
+*{
+    box-sizing: border-box;
+    border: 1px solid red;
+}
 body {
     display: flex;
     flex-direction: column;
@@ -11,6 +14,8 @@ body {
     display: flex;
     padding: 10px;
     background-color: #1F2937;
+    flex-direction: column;
+    max-width: 100vw;
 }
 
 .navbar {
