--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+
 *{
     box-sizing: border-box;
     border: 1px solid red;
@@ -24,7 +25,7 @@ body {
     align-items: center;
     width: 100%;
     height: 40px;
-    padding: 0px 60px;
+    padding: 0px 40px;
 }
 
 .logo {
@@ -49,4 +50,78 @@ ul {
     list-style: none;
     display: flex;
     gap: 15px;
+}
+
+.hero {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #1F2937;
+    padding: 40px 80px;
+    gap: 20px;
+}
+
+.hero-text {
+    width: 500px;
+    height: auto;
+}
+
+
+.hero-text h1 {
+    font-size: 48px;
+    font-weight: 900;
+    color: #F9FAF8;
+}
+
+.hero-text p, button {
+    font-size: 18px;
+    color: #E5E7EB;
+}
+
+.hero-image img {
+    max-width: 100vw;
+    height: 300px;
+    object-fit: cover;
+    border-radius: 15px;
+}
+
+.hero-text  button {
+    background-color: #3882F6;
+    border: none;
+    border-radius: 5px;
+    color: white;
+    padding: 15px 20px;
+    
+}
+
+.content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.character-cards {
+    display: flex;
+    gap: 20px;
+    padding: 40px 50px;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+
+.character-card {
+    display: flex;
+    flex-direction: column;
+    width: 200px;
+    align-items: center;
+    justify-content: flex-start;
+    gap: 5px;
+}
+
+.character-card img {
+    width: 200px;
+    height: 200px;
+    object-fit: cover;
+    border-radius: 15px;
 }
