--- a/style.css
+++ b/style.css
@@ -101,6 +101,12 @@ ul {
     justify-content: center;
 }
 
+.content .heading {
+    font-size: 36px;
+    font-weight: 900;
+    color: #1F2937;
+}
+
 .character-cards {
     display: flex;
     gap: 20px;
@@ -108,15 +114,23 @@ ul {
     justify-content: center;
     align-items: center;
     text-align: center;
+    max-width: 1000px;
+    flex-wrap: wrap;
 }
 
 .character-card {
     display: flex;
     flex-direction: column;
     width: 200px;
+    height: 300px;
     align-items: center;
     justify-content: flex-start;
-    gap: 5px;
+}
+
+.character-card h2 {
+    font-size: 18px;
+    font-weight: bold;
+    margin-bottom: -10px;
 }
 
 .character-card img {
@@ -124,4 +138,5 @@ ul {
     height: 200px;
     object-fit: cover;
     border-radius: 15px;
+    border: #3882F6 5px solid;
 }
