--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 
 *{
     box-sizing: border-box;
-    border: 1px solid red;
+    /*border: 1px solid red;*/
 }
 body {
     display: flex;
@@ -150,7 +150,7 @@ ul {
     align-items: center;
     justify-content: center;
     padding: 80px;
-    width: 100vw;
+    width: 100%;
     text-align: left;
 }
 
@@ -168,4 +168,45 @@ ul {
     display: flex;
     justify-content: flex-end;
 
+}
+
+.cta {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    padding:100px 80px;
+    width: 100%;
+}
+
+.cta-card {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background-color: #3882F6;
+    padding: 30px 100px;
+    border-radius: 15px;
+    color: #F9FAF8;
+    width: 80%;
+}
+
+.cta-button button {
+    background-color: #3882F6;
+    border: none;
+    border-radius: 5px;
+    color: white;
+    padding: 15px 20px;
+    font-size: 18px;
+    font-weight: bold;
+    border: #F9FAF8 2px solid;
+}
+
+.cta-text h1{
+    margin-bottom: -10px;
+}
+
+button:hover {
+    background-color: black;
+    color: #3882F6;
+    border: #F9FAF8 2px solid;
 }
