--- a/style.css
+++ b/style.css
@@ -210,3 +210,12 @@ button:hover {
     color: #3882F6;
     border: #F9FAF8 2px solid;
 }
+
+.footer {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #1F2937;
+    color: #F9FAF8;
+    padding: 10px;
+}
